--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,28 @@
 .App {
   text-align: center;
+  background-image: url("./img/cristal\ background.png");
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  border-radius: 200px;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #320081;
+height: 80%;
+width: 80%;
+margin: auto;
+padding: 100px;
+border-radius: 20px;
+opacity: .8;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #d4e0fd;
 }
 
 .App-link {
