--- a/src/App.css
+++ b/src/App.css
@@ -115,8 +115,13 @@ border-radius: 20px;
 }
 
 h2 {
-  color:#3a0d82;
-  font-size: 36px;
+  color:#99b2ec;
+  font-size: 52px;
+ text-shadow: 1px 1px 2px #3a0d82, 0 0 25px #4f12b0, 0 0 5px #00257b;
+}
+h3 {
+  color:#4f12b0;
+  font-size: 28px;
 }
 .box__section--omnie {
   display: grid;
