--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,7 @@ border-radius: 20px;
 }
 
 h2 {
-  color:#bbcdf7;
+  color:#eff1f4;
   font-size: 52px;
  text-shadow: 1px 1px 2px #3a0d82, 0 0 25px #4f12b0, 0 0 5px #00257b;
 }
@@ -141,12 +141,13 @@ h3 {
 }
 .table__job{
   border: solid #3a0d82;
-  background-color: #ffe4c4;
+  background-color: #ffefdc;
   padding: 5px;
 }
 .table__job tr:nth-child(even){
-  background-color: #ebd0ac;
+  background-color: #eff1f4;
 }
 th{
-  background-color: #99b2ec;
+  background-color: #3a0d82;
+  color: #ffefdc  ;
 }
