--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,14 @@ max-width: fit-content;
   height: 40vmin;
   pointer-events: none;
   border-radius: 200px;
+  box-shadow: 0 0 25px #bbcdf7;
 }
 
+a{
+  text-decoration: none;
+}
 .App-header {
-height: 80%;
-width: 80%;
 margin: auto;
-padding: 100px;
-border-radius: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,12 +23,17 @@ border-radius: 20px;
   font-size: calc(10px + 2vmin);
   color:#3a0d82 ;
 }
-
+.box__main--likbutton{
+  padding: 1rem;
+  height: 2rem;
+}
 .App-link {
-  color: #00257b;
+  font-size: larger;
+  color: #cdf8ff;
 }
 .App-link:hover{
-  color:#044cf3
+  color:#91b0f8;
+  text-shadow: 0 0 25px #ffffff;
 }
 
 .nav--emoji{
@@ -41,7 +46,7 @@ border-radius: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 10vh;
+  height: 15vh;
   font-size: 24px;
   background-color: #3a0d82;
 }
@@ -116,10 +121,12 @@ border-radius: 20px;
   transform: scaleX(0);
 }
 section{
-  padding: 5rem;
+  padding:2rem;
+  min-height: 30rem
 }
 section:nth-child(even){
   background-color: #3a0d82;
+  
   color:#eff1f4;
 }
 
