--- a/src/App.css
+++ b/src/App.css
@@ -220,6 +220,9 @@ margin: auto;
   padding: 0.5rem;
   border-radius: 15px;
 }
+.box__priv--navIcons{
+  height: 3rem;
+}
 
 .box__private{
   width: auto;
@@ -233,6 +236,7 @@ margin: auto;
   height: 2rem;
 }
 .contener--privGrid{
+  position:relative;
   width: fit-content;
   margin: 3rem auto;
   display: grid;
@@ -241,11 +245,14 @@ margin: auto;
   grid-gap: 2rem 1rem;
 }
 .box__privGrid--empty{
+  position: relative;
   border: solid 2px #3a0d82;
   border-radius: 15px;
   background-color:  #3a0d82;
   box-shadow: 0 0 5px #d3bbf9;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 5rem;
   width: 5rem;
 }
@@ -264,4 +271,18 @@ margin: auto;
   padding: 1rem;
   max-width: 3rem;
   max-height: 3rem;
+}
+
+.tile-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
 }
