--- a/src/App.css
+++ b/src/App.css
@@ -335,3 +335,32 @@ font-weight: bolder;
 font-size: 1.5rem;
   margin: 1rem;
 }
+.box__portfolio--content{
+  width: 80%;
+  margin: 2rem auto;
+}
+.box__portfolio--content>a, div{
+  display: inline-block;
+}
+.portfolio--miniature{
+  height: 15rem;
+  border-radius: 15px;
+}
+.box__portfolio--techText{
+
+background-color: #91b0f8;
+}
+.portfolio__list{
+
+  background-color: #fff; 
+  width: 15rem;
+  list-style-type: square;
+  list-style-position: inside;
+  text-align: left;
+  margin: 1rem;
+}
+.box__portfolio--describeText{
+  background-color: #ffefdc;
+ width: 15rem;
+ margin: 1rem;
+}
