--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ margin: auto;
   align-items: center;
   height: 15vh;
   font-size: 24px;
-  background-color: #3a0d82;
+  background-color: rgb(58, 13, 130);
 }
 .nav__button--emoji {
   display: inline-block;
@@ -346,12 +346,14 @@ font-size: 1.5rem;
 }
 .box__portfolio--content>div{
   visibility: hidden;
+  height: 5rem;
 }
 .box__portfolio--content.hovered>div{
   visibility :visible;
+  height: fit-content;
   border: solid 2px #00257b;
   border-radius: 15px;
-  background-color: #eff1f4;
+  background-color: rgb(239, 241, 244, 0.5);
 }
 .box__portfolio--techText.visable{
   visibility: visible;
