css lifting - omnie and Navbar hidden

--- a/src/App.css
+++ b/src/App.css
@@ -12,12 +12,6 @@ background-size: cover
   box-shadow: 0 0 25px #bbcdf7;
 }
 
-@media screen and (max-width: 767px) {
-  .box__nav--navigation{
-    visibility: hidden;
-    max-height: 0
-  }
-}
 
 section{
   padding:2rem;
@@ -25,7 +19,7 @@ section{
 /* width: 100%; */
 
 }
-section:nth-child(even){
+section:nth-child(odd){
   background-color: #3a0d82;
   color:#eff1f4;
 }
@@ -56,109 +50,6 @@ margin: auto;
   text-shadow: 0 0 25px #ffffff;
 }
 
-.nav--emoji{
-  font-size: 3rem; 
-}
-
-@media screen and (max-width: 767px) {
-  .nav--emoji{
-    font-size: 2rem;
-  }
-}
-
-.box__nav--navigation {
-  position: sticky;
-  top: 0;
-  right: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 5rem;
-  font-size: 1.5rem;
-  background-color: rgb(58, 13, 130);
-}
-
-.nav__button--emoji {
-  display: inline-block;
-}
-.span__nav,
-.nav--emoji {
-  font-weight: bold;
-  position: relative;
-  z-index: 3;}
-
-.nav__button--nav {
-  height: 7rem;
-  margin-left: 2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-@media screen and (max-width: 767px) {
-  .box__nav--navigation{
-    font-size: .7rem;
-  }
-}
-.nav__button--nav a {
-  text-decoration: none;
-  border: 2px solid#bbcdf7;
-  padding: 15px;
-  color: #eff1f4;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  position: relative;
-  display: inline-block;
-}
-.nav__button--emoji a {
-  text-decoration: none;
-  border: 2px solid #bbcdf7;
-  padding: 1px 15px;
-  color: #eff1f4;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  position: relative;
-  display: inline-block;}
-
-.nav__button--nav a::before ,
-.nav__button--emoji a::before {
-  content: "";
-  position: absolute;
-  top: 5px;
-  left: -2px;
-  width: calc(100% + 6px);
-  height: calc(100% - 10px);
-  background-color: #3a0d82;
-  transition: all 0.5s ease-in-out;
-  transform: scaleY(1);
-}
-.nav__button--nav a:hover::before ,
-.nav__button--emoji a:hover::before {
-  transform: scaleY(0);
-}
-
-.nav__button--nav a::after,
-.nav__button--emoji a::after {
-    content: "";
-    position: absolute;
-    left: 5px;
-    top: -5px;
-    width: calc(100% - 10px);
-    height: calc(100% + 10px);
-    background-color: #3a0d82;
-    transition: all 0.5s ease-in-out;
-    transform: scaleX(1);
-}
-.nav__button--nav a:hover::after,
-.nav__button--emoji a:hover::after {
-  transform: scaleX(0);
-}
-/* @media screen and (max-width: 767px) {
-  h2{
-    font-size: ;
-  }
-} */
 h2 {
   color:#eff1f4;
   font-size: 3rem;
@@ -168,219 +59,12 @@ h3 {
   color:#4f12b0;
   font-size: 2rem;
 }
-@media screen and (min-width: 768px){
-  .box__section--omnie,
-.box__section--programowanie {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-}
-
-.box__section__div--omnie, 
-.box__private--article,
-.box__programowanie--article{
-  max-width: 50rem;
-  margin: auto;
-}
-@media screen and (min-width: 768px) {
-  Job{
-  grid-column: 1;
-}
-Private{
-  grid-column: 2;
-}}
-.span__private--tekst,
-.span__job--tekst,
-.span__programowanie--text{
-  font-size: 20px;
-  display: block;
-  padding: 10px;
-}
-.table__job{
-  border: solid #3a0d82;
-  background-color: #ffefdc;
-  padding: 5px;
-}
-.table__job tr:nth-child(even){
-  background-color: #eff1f4;
-}
-th{
-  background-color: #3a0d82;
-  color: #ffefdc  ;
-}
-
-.img--icons{
-  display: block;
-margin: auto;
-  max-width: 15rem;
-}
-
-.job__sliderbox{
-  text-align: center;
-  min-height: 12rem;
-}
-
-.button__navigation--slider{
-  background-color: #3a0d82;
-  color: #fff;
-  border: none;
-  padding: 10px 10px;
-  border-radius: 5px;
-  font-size: 1rem;
-  cursor: pointer;
-  display: inline-block;
-  height: 12rem;
-  vertical-align: middle;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-.button__navigation--slider:hover{
-  background-color: #520f75;
-}
-.button__navigation--slider:active {
-  opacity: 0.8;
-}
-
-.slider-item{
-  display: inline-block;
-  max-width: 80%;
-  padding: 0 20px;
-  vertical-align: middle;
-}
-@media screen and (max-width: 767px) {
-  .slider-item{
-    max-width: 13rem
-  }
-  
-}
-.slider-p{  
-  background-color: #3a0d82;
-  color: #fff;
-  padding: 0.5rem;
-  border-radius: 15px;
-}
-.box__priv--navIcons{
-  height: 3rem;
-}
-
-.box__private{
-  width: auto;
-}
-.img__priv{
-  height: 1.5rem;
-  display: inline-block;
-  margin: 1rem;
-}
-.img__priv:hover, .img__priv:visited{
-  height: 2rem;
-}
-.contener--privGrid{
-  position:relative;
-  width: fit-content;
-  margin: 3rem auto;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows:repeat(3,1fr);
-  grid-gap: 2rem 1rem;
-}
-@media screen and (max-width: 676px) {
-  .contener--privGrid{
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows:repeat(5,1fr); 
-}
+h4 {
+  font-style: italic;
 }
 
 
-.box__privGrid--empty{
-  position: relative;
-  border: solid 2px #3a0d82;
-  border-radius: 15px;
-  background-color:  #3a0d82;
-  box-shadow: 0 0 5px #d3bbf9;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 5rem;
-  width: 5rem;
-}
-.box__privGrid--img{
-  border: solid 2px  #3a0d82;
-  border-radius: 15px;
-  background-color: #3a0d82;
-  box-shadow: 0 0 5px #d3bbf9;
-  height: 5rem;
-  width: 5rem;
-}
-.box__privGrid--img:hover{
-  box-shadow: 0 0 20px #91b0f8;
-}
-.img__privGrid--icon {
-  padding: 1rem;
-  max-width: 3rem;
-  max-height: 3rem;
-}
 
-.tile-content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(58, 13, 130, 0.9);
-  border-radius: 15px;
-  color: #bbcdf7;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1rem;
-}
-.tile-content> .content-wrapper{
-  position:flex;
-  flex-direction:column;
-  justify-content: flex-start;
-  height: 100%;
-}
-.img__privGrid--navArrow{
-  width: 3rem;
-  height: 2rem;
-  padding: .5rem;
-}
-.img__privGrid--navArrow>img{
-  height: 1.5rem;
-}
-.paragraf__privGrid__hobbyContent{
-  padding: 2rem;
-  flex-grow: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.box__contact--items{
-  display: flex;
-  flex-direction: row;
-  align-items: space-around;
-  justify-content: center;
- width: 40%;
-  margin: 2rem auto;
- border: solid 2px #91b0f8;
- border-radius: 15px;
- background-color: #bbcdf7;
-}
-.box__contact--items:hover{
-background-color: #ffefdc;
-}
-.icon--contact{
-  width: fit-content;
-  height: 3rem;
-  margin: 1rem;
-}
-.paragraf__contact{
-  display: block;
-  width: 10rem;
-color: #3a0d82;
-font-weight: bolder;
-font-size: 1.5rem;
-  margin: 1rem;
-}
 
 @media screen and (max-width: 767px){
   .contener__box__portfolio--items{
